# STM32F4-Discovery-Board_Examples

./: .gitignore  LICENSE  README.md  index.md
ADC_OnBoard3VPinRead/: .cproject  .mxproject  .project  ADC_OnBoard3VPinRead Debug.launch  ADC_OnBoard3VPinRead.ioc
ADC_OnBoard3VPinRead/Core/Src/: main.c
ADC_OnBoard3VPinRead/Debug/: ADC_OnBoard3VPinRead.elf  ADC_OnBoard3VPinRead.list  ADC_OnBoard3VPinRead.map  makefile
ADC_OnBoard3VPinRead/Debug/Core/Src/: main.su
ADC_onboardTemperatureSensor/.metadata/: version.ini
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.cdt.core/: adc_onboardTemperatureSensor.1624113629605.pdom  adc_onboardTemperatureSensor.language.settings.xml
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  2.tree
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.recommenders.news.impl/downloads/: http%3A%2F%2Fsumba.atollic.com%2Frss%2Ftrueperspectives.xml
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
ADC_onboardTemperatureSensor/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
ADC_onboardTemperatureSensor/adc_onboardTemperatureSensor/: .cproject  .project  adc_onboardTemperatureSensor.elf.launch
ADC_onboardTemperatureSensor/adc_onboardTemperatureSensor/src/: main.c  stm32f4xx_conf.h  system_stm32f4xx.c  tiny_printf.c
CAN/: .cproject  .project  CAN.elf.launch  CAN.launch
CAN/Debug/: CAN.elf  CAN.list  CAN.map
CAN/Debug/Libraries/STM32F4xx_StdPeriph_Driver/src/: misc.d  misc.su  stm32f4xx_adc.d  stm32f4xx_adc.su  stm32f4xx_can.d  stm32f4xx_can.su  stm32f4xx_crc.d  stm32f4xx_crc.su  stm32f4xx_cryp.d  stm32f4xx_cryp.su  stm32f4xx_cryp_aes.d  stm32f4xx_cryp_aes.su  stm32f4xx_cryp_des.d  stm32f4xx_cryp_des.su  stm32f4xx_cryp_tdes.d  stm32f4xx_cryp_tdes.su  stm32f4xx_dac.d  stm32f4xx_dac.su  stm32f4xx_dbgmcu.d  stm32f4xx_dbgmcu.su  stm32f4xx_dcmi.d  stm32f4xx_dcmi.su  stm32f4xx_dma.d  stm32f4xx_dma.su  stm32f4xx_exti.d  stm32f4xx_exti.su  stm32f4xx_flash.d  stm32f4xx_flash.su  stm32f4xx_fsmc.d  stm32f4xx_fsmc.su  stm32f4xx_gpio.d  stm32f4xx_gpio.su  stm32f4xx_hash.d  stm32f4xx_hash.su  stm32f4xx_hash_md5.d  stm32f4xx_hash_md5.su  stm32f4xx_hash_sha1.d  stm32f4xx_hash_sha1.su  stm32f4xx_i2c.d  stm32f4xx_i2c.su  (+22 more)
CAN/Debug/src/: main.d  main.su  stm32f4xx_it.d  stm32f4xx_it.su  system_stm32f4xx.d  system_stm32f4xx.su  tiny_printf.su
CAN/src/: main.c  system_stm32f4xx.c
EXTI_Interrupt_PushButton_OnBoard/.metadata/: version.ini
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.cdt.core/: exti_Interrupt_pushButton.1624111538623.pdom  exti_Interrupt_pushButton.language.settings.xml
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  2.tree
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.recommenders.news.impl/downloads/: http%3A%2F%2Fsumba.atollic.com%2Frss%2Ftrueperspectives.xml
EXTI_Interrupt_PushButton_OnBoard/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
EXTI_Interrupt_PushButton_OnBoard/exti_Interrupt_pushButton/: .cproject  .project  exti_Interrupt_pushButton.elf.launch  stm32f4_flash.ld
EXTI_Interrupt_PushButton_OnBoard/exti_Interrupt_pushButton/src/: stm32f4xx_conf.h  stm32f4xx_it.h
IIC_Master/: .cproject  .project  IIC_Master.ioc  IIC_Master.launch
IIC_Master/Core/Inc/: main.h  stm32f4xx_it.h
IIC_Master/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
IIC_Slave/: .cproject  .project  IIC_Slave Debug.launch  IIC_Slave.ioc
IIC_Slave/Core/Inc/: iic_slave.h  main.h
IIC_Slave/Core/Src/: iic_slave.c  main.c  stm32f4xx_hal_msp.c
LED_Blink/: .cproject  LED_Blink.elf.launch
LED_Blink/Debug/: LED_Blink.elf  LED_Blink.list  LED_Blink.map
LED_Blink/Debug/src/: main.su
LED_Blink/src/: main.c  stm32f4xx_conf.h
LED_Blink_CMake/: .cproject  .project  CMakeLists.txt  LED_Blink_CMake Debug.launch  LED_Blink_CMake.ioc  README.md
LED_Blink_CMake/Core/Inc/: main.h
LED_Blink_CMake/Core/Src/: main.c
RNG/.metadata/: version.ini
RNG/.metadata/.plugins/org.eclipse.cdt.core/: can_node.1632506873137.pdom  can_node.language.settings.xml  rng.1624115755589.pdom  rng.language.settings.xml
RNG/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  17.tree
RNG/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
RNG/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
RNG/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
RNG/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
RNG/rng/: .cproject  .project  rng.elf.launch
RNG/rng/src/: main.c  stm32f4xx_conf.h
Timer_TIM10/: .cproject  .project  Timer_TIM10.elf.launch  stm32f4_flash.ld
Timer_TIM10/src/: main.c  stm32f4xx_conf.h  stm32f4xx_it.h  system_stm32f4xx.c  tiny_printf.c
USART/: .cproject  USART.elf.launch  stm32f4_flash.ld
USART/Debug/: USART.elf  USART.list  USART.map
USART/Debug/src/: main.su
USART/src/: main.c  stm32f4xx_conf.h  stm32f4xx_it.h  tiny_printf.c
USB_Device_CDC/: .cproject  .project  USB_Device_CDC Debug.launch  USB_Device_CDC.ioc
USB_Device_CDC/Core/Inc/: main.h  stm32f4xx_it.h
USB_Device_CDC/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
zz_codeBackups/: IIC_Master_main.c  USB_Device_CDC_usbd_cdc_if.c
(+42 files in other folders)
